@@ -1,4 +1,8 @@
-2018-06-08  Carl Hetherington  <cth@carlh.net>
+2018-06-09  Carl Hetherington  <cth@carlh.net>
+
+	* Add option to open a DCP in the player (#1312).
+
+a2018-06-08  Carl Hetherington  <cth@carlh.net>
 
 	* Add support for rotation and flipping of video sources,
 	and auto-detect when this is necessary (#966).
